--- a/.frogbot/frogbot-config.yml
+++ b/.frogbot/frogbot-config.yml
@@ -64,7 +64,7 @@
         # 2. The `installCommand` variable isn't set in your frogbot-config.yml file.
         #
         # The command that installs the project dependencies (e.g "nuget restore")
-        #- installCommand: "npm install --ignore-scripts --no-audit"
+        - installCommand: "mvn install"
 
           # [Default: root directory]
           # List of relative path's to the projects directories in the git repository
@@ -81,7 +81,7 @@
 
       # [Optional]
       # Name of a Virtual Repository in Artifactory to resolve (download) the project dependencies from
-      -    repository: "default-maven-remote"
+          repository: "default-maven-remote"
 
     # JFrog Platform parameters
     jfrogPlatform:
